--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,18 @@
 {{>header}}
     <!-- header-end -->
 
-    <!-- slider_area_start -->
-    <div class="slider_area">
-        <div class="single_slider d-flex align-items-center justify-content-center slider_bg_1 overlay2">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-xl-9">
-                        <div class="slider_text text-center">
-                            <p>Welcome to Horizon, 
-                                your new favorite Internet Service Provider in Ghana</p>
-                            <h3>Unleash Possibilities with the best Internet Service</h3>
-                    
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <!-- lets_launch_start -->
+    <div class="lets_launch launch_bg_1 overlay2">
+        <div class="launch_text text-center">
+            <h3>Welcome to Horizon</h3>
+            <p>your new favorite Internet Service Provider in Ghana. 
+            Unleash Possibilities with the best Internet Service.
+            </p>
+            
         </div>
     </div>
-    <!-- slider_area_end -->
+    <!-- lets_launch_end -->
+
 
     <!-- prising_area_start -->
     <div class="prising_area">
@@ -55,7 +49,7 @@
                         </div>
                         <h3>Supersonic</h3>
                         <p class="prising_text">This offer is for small businesess</p>
-                        <p class="prise">20mbps for <span>GHS3850</span></p>
+                        <p class="prise">GHS3850 for<span>20mbps </span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -66,7 +60,7 @@
                         </div>
                         <h3>Ultrasonic</h3>
                         <p class="prising_text">Typically for medium sized businesses</p>
-                        <p class="prise">45mbps for <span>GHS7750</span></p>
+                        <p class="prise"> GHS7750 for <span>45mbps</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -76,8 +70,8 @@
                             <i class="flaticon-servers-1"></i>
                         </div>
                         <h3>Super Ultrasonic</h3>
-                        <p class="prising_text">This offer is the choice of large businesses and organizations. </p>
-                        <p class="prise">65mbps for <span>GHS8350</span></p>
+                        <p class="prising_text">This offer is the choice of large businesses. </p>
+                        <p class="prise"> GHS8350 for<span>65mbps</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -156,10 +150,12 @@
                                         <div class="icon"><i class="flaticon-like"></i></div>
                                         <div class="features_info">
                                             <h4>
-                                                Free Domain for 1st Year
+                                                Service Level Agreement (SLA)
                                             </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
+                                            <p>Our services as for your comfort and convenience, and you will realise This
+                                                in our service levels. Our clients report of low downtimes and praise our 
+                                                reliable services.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -168,37 +164,16 @@
                                         <div class="icon blue"><i class="flaticon-lock"></i></div>
                                         <div class="features_info">
                                             <h4>
-                                                Free SSL Certificate
+                                                Modes of Connectivity
                                             </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
+                                            <p>We offer our services through fiber cable and radio signals. Where ever you
+                                                are located, just give us a call and we will find a way provide internet through
+                                                leased lines or our own cables </p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-6">
-                                    <div class="single_features">
-                                        <div class="icon pink"><i class="flaticon-like"></i></div>
-                                        <div class="features_info">
-                                            <h4>
-                                                30-Day Money-Back Guarantee
-                                            </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-6">
-                                    <div class="single_features">
-                                        <div class="icon yellow"><i class="flaticon-lock"></i></div>
-                                        <div class="features_info">
-                                            <h4>
-                                                Spam Protection
-                                            </h4>
-                                            <p>Our set he for firmament morning sixth subdue darkness creeping gathered
-                                                divide our let god moving.</p>
-                                        </div>
-                                    </div>
-                                </div>
+                                
+                                
                             </div>
                         </div>
                     </div>
@@ -241,8 +216,10 @@
                         <h3>
                             Our Data Centres
                         </h3>
-                        <p>Your domain control panel is designed for ease-of-use and <br>
-                            allows for all aspects of your domains.
+                        <p>As Ghanaian owned organization, our data center is located in the Greater Accra
+                            region of Ghana, Tema, part of Ghana for safety and precautionary reasons. Due to this we have constant access to power supply 
+                            and so we cannot fail you.
+
                         </p>
                     </div>
                 </div>
@@ -256,8 +233,6 @@
                                     <div class="address_inner">
                                         <i class="fa fa-map-marker"></i>
                                         <h3>Accra, Ghana</h3>
-                                        <p>It is a long established fact that <br>
-                                            a reader</p>
                                     </div>
                                 </div>
                             </span>
@@ -314,15 +289,16 @@
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" data-toggle="collapse"
                                         data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        <i class="flaticon-info"></i> Is WordPress hosting worth it?
+                                        <i class="flaticon-info"></i> How can i apply for a package outside your stated packages?
+                                        
                                     </button>
                                 </h5>
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                 data-parent="#accordion">
                                 <div class="card-body">
-                                    Our set he for firmament morning sixth subdue darkness creeping gathered divide our
-                                    let god moving. Moving in fourth air night bring upon
+                                    Yes you can, do contact us and lets have a chat about getting
+                                    you a befitting customised plan.
                                 </div>
                             </div>
                         </div>
@@ -331,16 +307,16 @@
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" data-toggle="collapse"
                                         data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                        <i class="flaticon-info"></i> What are the advantages <span>of WordPress hosting
-                                            over shared?</span>
+                                        <i class="flaticon-info"></i> Are there other <span>hosting services
+                                           you offer now? </span>
                                     </button>
                                 </h5>
                             </div>
                             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion"
                                 style="">
                                 <div class="card-body">
-                                    Our set he for firmament morning sixth subdue darkness creeping gathered divide our
-                                    let god moving. Moving in fourth air night bring upon
+                                     
+                                    No please, but we will be expanding to other services soon.
                                 </div>
                             </div>
                         </div>
@@ -350,15 +326,15 @@
                                     <button class="btn btn-link collapsed" data-toggle="collapse"
                                         data-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        <i class="flaticon-info"></i> Will you transfer my site?
+                                        <i class="flaticon-info"></i> How do i start cloud hosting?
                                     </button>
                                 </h5>
                             </div>
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-parent="#accordion">
                                 <div class="card-body">
-                                    Our set he for firmament morning sixth subdue darkness creeping gathered divide our
-                                    let god moving. Moving in fourth air night bring upon
+                                    There are different kinds of cloud hosting that we will be 
+                                    offering soon, you can take advantage of them when we start.
                                 </div>
                             </div>
                         </div>
@@ -367,34 +343,18 @@
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" data-toggle="collapse"
                                         data-target="#collapse_4" aria-expanded="false" aria-controls="collapse_4">
-                                        <i class="flaticon-info"></i> Why should I host with ISP?
+                                        <i class="flaticon-info"></i> Why do i need to select an internet service plan?
                                     </button>
                                 </h5>
                             </div>
                             <div id="collapse_4" class="collapse" aria-labelledby="heading_4" data-parent="#accordion">
                                 <div class="card-body">
-                                    Our set he for firmament morning sixth subdue darkness creeping gathered divide our
-                                    let god moving. Moving in fourth air night bring upon
+                                    People have different needs and can afford different plans. Hence we created these categorized 
+                                    plans to make choosing easire for you.
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
-                            <div class="card-header" id="heading_5">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
-                                        data-target="#collapse_5" aria-expanded="false" aria-controls="collapse_5">
-                                        <i class="flaticon-info"></i> How do I get started <span>with Shared
-                                            Hosting?</span>
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapse_5" class="collapse" aria-labelledby="heading_5" data-parent="#accordion">
-                                <div class="card-body">
-                                    Our set he for firmament morning sixth subdue darkness creeping gathered divide our
-                                    let god moving. Moving in fourth air night bring upon
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -413,9 +373,7 @@
                         <h3>
                             Latest News
                         </h3>
-                        <p>Your domain control panel is designed for ease-of-use and <br>
-                            allows for all aspects of your domains.
-                        </p>
+                        
                     </div>
                 </div>
             </div>
@@ -429,10 +387,9 @@
                         </div>
                         <div class="news_content">
                             <div class="news_meta">
-                                <a href="#">12 Jun, 2019 in <span>Hosting tips</span> </a>
+                                <a href="#">20th April, 2020 in <span>Hosting tips</span> </a>
                             </div>
-                            <h3><a href="#">Commitment to dedicated
-                                    Support</a></h3>
+                            <h3><a href="#">Tema</a></h3>
                             <p class="news_info">Firmament morning sixth subdue darkness</p>
                         </div>
                     </div>
@@ -476,23 +433,6 @@
     </div>
     <!-- latest_new_area_end -->
 
-    <!-- lets_launch_start -->
-    <div class="lets_launch launch_bg_1 overlay2">
-        <div class="launch_text text-center">
-            <h3>Let’s Launch your Website Now</h3>
-            <p>Our set he for firmament morning sixth subdue darkness creeping gathered divide our let god moving. <br>
-                Moving in fourth air night bring upon you’re it beast.</p>
-            <div class="chat">
-                <a class="boxed_btn_green" href="#">
-                    <i class="flaticon-chat"></i>
-                    <span>Live Chat</span>
-                </a>
-                <a class="boxed_btn_green2" href="#">
-                    <span>get start now</span>
-                </a>
-            </div>
-        </div>
-    </div>
-    <!-- lets_launch_end -->
+    
 
 {{>footer}}
