--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -2,7 +2,7 @@
 
     <!-- bradcam_area_start -->
     <div class="bradcam_area breadcam_bg overlay2">
-        <h3>Meet the Team</h3>
+        <h3>Executive Team</h3>
     </div>
 
 
