--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,10 +4,10 @@
     <!-- lets_launch_start -->
     <div class="lets_launch launch_bg_1 overlay2">
         <div class="launch_text text-center">
-            <h3>Welcome to Horizon</h3>
-            <p>your new favorite Internet Service Provider in Ghana. 
+            <h2>Welcome to Horizon</h2>
+            <h5>Your new favorite Internet Service Provider in Ghana. 
             Unleash Possibilities with the best Internet Service.
-            </p>
+            </h5>
             
         </div>
     </div>
@@ -38,7 +38,7 @@
                         </div>
                         <h3>Sonic</h3>
                         <p class="prising_text">Typically for large families who consume a lot of data. </p>
-                        <p class="prise">8mbps for <span>GHS2150</span></p>
+                        <p class="prise">GHS2150 for<span>8mbps</span></p>
                         <a href="#" class="boxed_btn_green2">Start Now</a>
                     </div>
                 </div>
@@ -190,11 +190,10 @@
                 <div class="col-xl-5 col-md-8">
                     <div class="support_info">
                         <h3>24h Dedicated Support</h3>
-                        <p>Our set he for firmament morning sixth subdue darkness creeping gathered divide our let god
-                            moving. Moving in fourth air night bring upon you’re it beast.</p>
+                        <p>Our support staff are trained periodically to better understand your requests. </p>
                         <div class="get_started">
                             <a class="boxed_btn_green" href="#">
-                                <span>Get Started Now</span>
+                                <span>Get in touch now</span>
                             </a>
                             <a href="#" class="phone_num">
                                 +233 548 769 251
@@ -281,7 +280,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="accordion_heading">
-                        <h3>Frequently Ask Question</h3>
+                        <h3>Frequently Asked Questions</h3>
                     </div>
                     <div id="accordion">
                         <div class="card">
@@ -362,76 +361,6 @@
     </div>
     <!-- faq_area_end -->
 
-
-
-    <!-- latest_new_area_start -->
-    <div class="latest_new_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title text-center mb-100">
-                        <h3>
-                            Latest News
-                        </h3>
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_news">
-                        <div class="thumb">
-                            <a href="#">
-                                <img src="../public/img/news/1.png" alt="">
-                            </a>
-                        </div>
-                        <div class="news_content">
-                            <div class="news_meta">
-                                <a href="#">20th April, 2020 in <span>Hosting tips</span> </a>
-                            </div>
-                            <h3><a href="#">Tema</a></h3>
-                            <p class="news_info">Firmament morning sixth subdue darkness</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_news">
-                        <div class="thumb">
-                            <a href="#">
-                                <img src="../public/img/news/2.png" alt="">
-                            </a>
-                        </div>
-                        <div class="news_content">
-                            <div class="news_meta">
-                                <a href="#">12 Jun, 2019 in <span>Hosting tips</span> </a>
-                            </div>
-                            <h3><a href="#">Commitment to dedicated
-                                    Support</a></h3>
-                            <p class="news_info">Firmament morning sixth subdue darkness</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_news">
-                        <div class="thumb">
-                            <a href="#">
-                                <img src="../public/img/news/3.png" alt="">
-                            </a>
-                        </div>
-                        <div class="news_content">
-                            <div class="news_meta">
-                                <a href="#">12 Jun, 2019 in <span>Hosting tips</span> </a>
-                            </div>
-                            <h3><a href="#">Commitment to dedicated
-                                    Support</a></h3>
-                            <p class="news_info">Firmament morning sixth subdue darkness</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- latest_new_area_end -->
 
     
 
