--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,8 @@
     <!-- lets_launch_start -->
     <div class="lets_launch launch_bg_1 overlay2">
         <div class="launch_text text-center">
-            <h2 class="text-white">Welcome to Horizon</h2>
-            <h5>Your new favorite Internet Service Provider in Ghana. 
+            <h1 class="text-white">Welcome to Horizon</h1>
+            <h5 class="text-white">Your new favorite Internet Service Provider in Ghana. 
             Unleash Possibilities with the best Internet Service.
             </h5>
             
