--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ISP</title>
+    <title>Horizon</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,7 +41,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="/">
-                                    <img src="../../public/img/logo.png" alt="">
+                                    <img width="20%" src="../../public/img/logo.png" alt="">
                                 </a>
                             </div>
                         </div>
