--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -41,7 +41,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="/">
-                                    <img width="20%" src="../../public/img/logo.png" alt="">
+                                    <img src="../../public/img/logo.png" alt="">
                                 </a>
                             </div>
                         </div>
